# rust_on_nails

./: .env  Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/queries/: fortunes.sql
app/src/: cornucopia.rs  main.rs
app/templates/fortunes/: index.rs.html
db/migrations/: 20221113063214_initial_tables.sql
src/: config.rs  main.rs
