[package]
name = "app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
axum-macros = "0.2.3"
config = "0.13.1"
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.3"
futures = "0.3.25"
postgres-types = "0.2.4"
rustls = "0.20.7"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.9.0"
webpki-roots = "0.22.5"
